tests/tc/pos/obj03.js

/*@ foo :: ({a: number, b: boolean}) => { a: number } */
function foo(x) {
  return x;
}

