tests/tc/neg/downcast-01.js

/*@ simple :: (x: number + { a: number } + boolean ) 
              => number + boolean + {b: number  } */
function simple(x) {
  return x;
}


